# LiWiPot

./: LICENSE  README.md
doc/: README.md
src/: BinaryVTKFile.cpp  BinaryVTKFile.hh  CMakeLists.txt  Communicator.cpp  Communicator.hh  FieldPatch.hh  Physics.cpp  Physics.hh  PlotBinaryVTK.cpp  PlotBinaryVTK.hh  defs.hh  main.cpp  utils.cpp  utils.hh
src/CMakeModules/: FindBoost.cmake  FindGSL.cmake  FindIPPL.cmake  FindTCLAP.cmake
tools/: checkLiWiPot.m  makeLiWiPot.sh
